# minigpu

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  update_pubspecs.py
gpu_tensor/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
gpu_tensor/example/: gpu_tensor_example.dart
gpu_tensor/example/flutter_example/: .metadata  pubspec.yaml
gpu_tensor/example/flutter_example/android/app/: build.gradle.kts
gpu_tensor/example/flutter_example/android/app/src/main/kotlin/com/example/flutter_example/: MainActivity.kt
gpu_tensor/example/flutter_example/lib/: main.dart
gpu_tensor/example/flutter_example/linux/: CMakeLists.txt
gpu_tensor/example/flutter_example/linux/runner/: my_application.cc
gpu_tensor/example/flutter_example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
gpu_tensor/example/flutter_example/macos/Runner/Configs/: AppInfo.xcconfig
gpu_tensor/example/flutter_example/test/: widget_test.dart
gpu_tensor/example/flutter_example/web/: index.html
gpu_tensor/example/flutter_example/windows/runner/: Runner.rc
gpu_tensor/lib/: gpu_tensor.dart
gpu_tensor/lib/src/: gpu_activation.dart  gpu_data.dart  gpu_fft.dart  gpu_linear_operator.dart  gpu_linear_ops.dart  gpu_operator.dart  gpu_ops.dart  gpu_pooling.dart  gpu_print.dart  gpu_tensor_base.dart  gpu_transform.dart
gpu_tensor/test/: README.md  gpu_activation_test.dart  gpu_data_test.dart  gpu_fft_test.dart  gpu_linear_operator_test.dart  gpu_linear_ops_test.dart  gpu_operator_test.dart  gpu_ops_test.dart  gpu_pooling_test.dart  gpu_print_test.dart  gpu_tensor_test.dart  gpu_transform_test.dart
minigpu/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
minigpu/example/: .metadata  minigpu_example.dart  pubspec.yaml
minigpu/example/android/: gradle.properties
minigpu/example/lib/: main.dart
minigpu/example/linux/flutter/: generated_plugins.cmake
minigpu/example/test/: widget_test.dart
minigpu/example/web/: index.html  manifest.json
minigpu/example/windows/flutter/: generated_plugins.cmake
minigpu/example/windows/runner/: Runner.rc
minigpu/lib/: buffer.dart  compute_shader.dart  minigpu.dart  minigpu_flutter.dart
minigpu/lib/src/: compute_shader.dart  minigpu.dart
minigpu/test/: minigpu_test.dart
minigpu_ffi/: .gitignore  README.md  pubspec.yaml
minigpu_ffi/android/: build.gradle  settings.gradle
minigpu_ffi/android/src/main/: AndroidManifest.xml
minigpu_ffi/hook/: build.dart
minigpu_ffi/ios/: minigpu_ffi.podspec
minigpu_ffi/lib/: minigpu_ffi.dart  minigpu_ffi_bindings.dart
minigpu_ffi/linux/: CMakeLists.txt
minigpu_ffi/macos/: minigpu_ffi.podspec
minigpu_ffi/src/: CMakeLists.txt
minigpu_ffi/src/cmake/: dawn.cmake  download.cmake  find_root.cmake  gpu.cmake  modify_js.cmake  print_target.cmake  webgpu.cmake
minigpu_ffi/src/include/: buffer.h  compute_shader.h  export.h  gpuh.h  minigpu.h
minigpu_ffi/src/js/: minigpu_web.loader.js
minigpu_ffi/src/src/: buffer.cpp  compute_shader.cpp  minigpu.cpp
minigpu_ffi/src/test/: minigpu_test.cpp
minigpu_ffi/windows/: CMakeLists.txt
minigpu_platform_interface/: LICENSE  README.md  pubspec.yaml
minigpu_platform_interface/lib/: minigpu_platform_interface.dart
minigpu_platform_interface/lib/platform_stub/: minigpu_platform_ffi.dart  minigpu_platform_stub.dart  minigpu_platform_web.dart
minigpu_web/: README.md  pubspec.yaml
minigpu_web/lib/: minigpu_web.dart
minigpu_web/lib/bindings/: minigpu_bindings.dart
minigpu_web/lib/bindings/wasm/: allocator.dart  heap.dart  pointer.dart  wasm.dart
minigpu_web/lib/web/: minigpu_web.js  minigpu_web.loader.js
